@@ -1,3 +1,9 @@
+2005-01-27  Marcus Brinkmann  <marcus@gnu.org>
+
+	* hurd-l4/sysdeps/l4/hurd/sigaction.c: New dummy file to prevent
+	including recursive dependencies from the BSD implementation.
+	* hurd-l4/sysdeps/l4/hurd/sigprocmask.c: Likewise.
+
 2005-01-23  Marcus Brinkmann  <marcus@gnu.org>
 
 	* Initial check-in.
